@@ -14,6 +14,14 @@ AUX 1.1.13/init 1307 RMD160 9c9f260b60dc89b06a365ca9a694669679dfe423 SHA1 b6d64c
 MD5 3a7413a6e9b3d71e9ec18edc4abb03c8 files/1.1.13/init 1307
 RMD160 9c9f260b60dc89b06a365ca9a694669679dfe423 files/1.1.13/init 1307
 SHA256 abea96e396dd47c46cdb79ae6339d00a2af549016c02135e889df055633c52cc files/1.1.13/init 1307
+AUX 1.2.4/conf 813 RMD160 b299bd4c1b30da82ff97bef6c53ebb742250cba5 SHA1 fa1d7d8a288e793558bad624df1f71fb94b136f4 SHA256 0ec5ac0e22e7beed1e601c6606df837724f318c3becef6965e391e98a711dc2e
+MD5 6e20476a01c641e05960dde347a15261 files/1.2.4/conf 813
+RMD160 b299bd4c1b30da82ff97bef6c53ebb742250cba5 files/1.2.4/conf 813
+SHA256 0ec5ac0e22e7beed1e601c6606df837724f318c3becef6965e391e98a711dc2e files/1.2.4/conf 813
+AUX 1.2.4/init 2124 RMD160 54926ee68c86e7e0607649ab6e69a831553eafff SHA1 706a3d3403c52e8b467af778be7c3d4bbf518ef0 SHA256 fe09e6dd9b0a83dd4d9265c6bd689c17866b396be1bf98daff7d0c6b5f329820
+MD5 995ca11d83d5928996476c41a4cc5682 files/1.2.4/init 2124
+RMD160 54926ee68c86e7e0607649ab6e69a831553eafff files/1.2.4/init 2124
+SHA256 fe09e6dd9b0a83dd4d9265c6bd689c17866b396be1bf98daff7d0c6b5f329820 files/1.2.4/init 2124
 AUX conf 537 RMD160 5de199b3d9a76ef0efed7ee6105594e904e9f8ad SHA1 5213df426a6bb9f19893fdbc77a5e060dc3ab8b4 SHA256 c93f522dd0fdcdd8c92c34114bc830b66edbd612f464a648c313ddc3f1ec00dd
 MD5 7d313d0464bf2dcec9d83b20646b0a95 files/conf 537
 RMD160 5de199b3d9a76ef0efed7ee6105594e904e9f8ad files/conf 537
@@ -36,6 +44,7 @@ DIST memcached-1.1.13-pre.tar.gz 138500 RMD160 7b914d97a3722d7f057e0f0113fd7ebc9
 DIST memcached-1.1.13.tar.gz 133734 RMD160 57b6da75e45af66f5d2a0c4a7a2a22a256cfb209 SHA1 e646da415434721b124baea10e09c62ce2ba3a56 SHA256 cb46911afde64f627af277b46b879b4a66d0653c22b9e6ccd31392a9a4ebbe5f
 DIST memcached-1.2.1.tar.gz 148755 RMD160 0b275591af74440f3de22946fb7ccc658f6578af SHA1 07ce5441874c052d28484070438822eedd7cc8ec SHA256 d489c1e8f9b149d7cde2bb1cb2c509ca6acedc32baed4e9b5f9e17d722c78c86
 DIST memcached-1.2.2.tar.gz 166201 RMD160 78dd094efb9b17a5e80a631690b929b3a4427854 SHA1 b2160f63ffe6e50681b3dd13a192153130897366 SHA256 8dbaedb88b8f9c61b977cf6e670bb3b0f172c357169ccba1c8362230bfdc7cf7
+DIST memcached-1.2.4-rc1.tar.gz 362644 RMD160 f4c78bea6aa4112575eab466c4255651f9af33de SHA1 b71153fbb4bd4aba986571917def23243a66e8cc SHA256 ecef3d5c912864a4c9ef209665cbb2546fca54e9cc79d833afba909f0c6cc988
 EBUILD memcached-1.1.11.ebuild 998 RMD160 e3aab0aacfa9542dc36f8ea012c88f4cf61e483e SHA1 4c5739c0129387843f1aff851997b6962d82a9a6 SHA256 920cb9d1633a2341f2ce398d9553c62df9ef4c9673be46657bd87fa4674d91ef
 MD5 468d5d26c94641674d61ea316557664a memcached-1.1.11.ebuild 998
 RMD160 e3aab0aacfa9542dc36f8ea012c88f4cf61e483e memcached-1.1.11.ebuild 998
@@ -88,10 +97,14 @@ EBUILD memcached-1.2.2.ebuild 1508 RMD160 5f10d9a0403606a35e3af72447d067708a060a
 MD5 5e3834262153336c8a59ba6f8c603410 memcached-1.2.2.ebuild 1508
 RMD160 5f10d9a0403606a35e3af72447d067708a060aa8 memcached-1.2.2.ebuild 1508
 SHA256 282e500035aba5745a2bdb22425abd777fc43f2a5d3ea65478a8db07de0a9341 memcached-1.2.2.ebuild 1508
-MISC ChangeLog 10137 RMD160 aebe578d8cdce1d1779c69bccfe4d51f759afe3d SHA1 4f9a9c415b17b9b8d13626741458e93828f96668 SHA256 5981a1080e77a33057f9fc79707eb2a0f0e2cf754e6a0788073f16403e1d71ee
-MD5 9528699b341b6f8429af57987ccecc85 ChangeLog 10137
-RMD160 aebe578d8cdce1d1779c69bccfe4d51f759afe3d ChangeLog 10137
-SHA256 5981a1080e77a33057f9fc79707eb2a0f0e2cf754e6a0788073f16403e1d71ee ChangeLog 10137
+EBUILD memcached-1.2.4_rc1.ebuild 1690 RMD160 e42360834f67bd80744c3fe7dcbe2f312e48c052 SHA1 d8fec2dab5e955dc1009b50717438922cb4ba246 SHA256 866a09cc044759d5f0d6a36956858087f1653f1a5b4c7ef63e33e2639484c812
+MD5 d1cd7deb8bb963049e5c24a6a82a14a5 memcached-1.2.4_rc1.ebuild 1690
+RMD160 e42360834f67bd80744c3fe7dcbe2f312e48c052 memcached-1.2.4_rc1.ebuild 1690
+SHA256 866a09cc044759d5f0d6a36956858087f1653f1a5b4c7ef63e33e2639484c812 memcached-1.2.4_rc1.ebuild 1690
+MISC ChangeLog 10500 RMD160 5a43874a37a0b06d838448e66f4c43dadd28b4e0 SHA1 b3b7499c81cf05ce269babc8b4022bcf260fa72f SHA256 102c48d78a1da2948b9b820fb1bc99b616c4407f3673e41dabe0f3d1a0901305
+MD5 bc45d36ed5a71b3ba952d9959ca8d645 ChangeLog 10500
+RMD160 5a43874a37a0b06d838448e66f4c43dadd28b4e0 ChangeLog 10500
+SHA256 102c48d78a1da2948b9b820fb1bc99b616c4407f3673e41dabe0f3d1a0901305 ChangeLog 10500
 MISC metadata.xml 841 RMD160 60a5beb49a85e92147066ead33afb1961bb00eec SHA1 11a620a9e2336f2dcee196b60c4d4e8127ca5c1e SHA256 6ecc5efcf267f183adeac1a372a306042849384a67f86d3543397dcaf62ff64e
 MD5 9df0145d69d668a197badf5fe5d0005c metadata.xml 841
 RMD160 60a5beb49a85e92147066ead33afb1961bb00eec metadata.xml 841
@@ -135,3 +148,6 @@ SHA256 3e2057753b27a6e078ddfbe52d78c484c8aa0f3885904647d5e8f640832bfa15 files/di
 MD5 8de9675f77e1d0a81b0200eaa8689140 files/digest-memcached-1.2.2-r2 247
 RMD160 5370d99ce47279fc56a78263d34f748f0286a725 files/digest-memcached-1.2.2-r2 247
 SHA256 3e2057753b27a6e078ddfbe52d78c484c8aa0f3885904647d5e8f640832bfa15 files/digest-memcached-1.2.2-r2 247
+MD5 bc8595f887caebcd2b2b7f0367c66a26 files/digest-memcached-1.2.4_rc1 259
+RMD160 62d755f9ad012933c4461f00b3cb0839434dca2e files/digest-memcached-1.2.4_rc1 259
+SHA256 5c04b68cabfa098aaf3a5867fde95c0b02027d1d7419f573a75338fcf967ce0a files/digest-memcached-1.2.4_rc1 259
