@@ -1,0 +1,77 @@
+#!/sbin/runscript
+# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/files/1.2.4/init,v 1.1 2007/11/27 01:22:16 robbat2 Exp $
+
+CONF="${SVCNAME#*.}"
+CONFBASE="/etc/conf.d/memcached"
+
+[ -z "${PIDBASE}" ] && PIDBASE="/var/run/memcached/memcached"
+[ "${CONF}" == "memcached" ] && CONF=''
+
+if [ -n "${CONF}" ]; then
+        PIDFILE="${PIDBASE}-${PORT}.${CONF}.pid"
+        CONFSRC="${CONFBASE}.${CONF}"
+        if [ -f "${CONFSRC}" ]; then
+         source "${CONFSRC}"
+        else
+         eerror "The configuration file $CONFSRC was not found!"
+        fi
+else
+        PIDFILE="${PIDBASE}-${PORT}.pid"
+        CONFSRC="${CONFBASE}"
+fi
+
+depend() {
+        need net
+}
+
+checkconfig() {
+        if [ -z "${LISTENON}" ]; then
+          ewarn "You should edit $CONFSRC and specify an address to listen on."
+          ewarn "Listening on any address (check your firewall!)"
+        fi
+
+}
+
+start() {
+        if [ -n "${CONF}" ]; then
+                ebegin "Starting memcached (${CONF})"
+        else
+                ebegin "Starting memcached"
+        fi
+        checkconfig
+        local dir="$(dirname ${PIDFILE})"
+        if [ ! -d "${dir}" ]; then
+          einfo " Creating ${dir}"
+          mkdir -p "${dir}"
+        fi
+        chown ${MEMCACHED_RUNAS} "${dir}"
+        if [ -f "${PIDFILE}" ]; then
+          einfo "  Removing stale pidfile ${PIDFILE}"
+          rm -f "${PIDFILE}" 1>/dev/null
+        fi
+
+        if [ -z "${LISTENON}" ]; then
+          c_LISTENON=""
+        else
+          c_LISTENON="-l ${LISTENON}"
+        fi
+
+        /sbin/start-stop-daemon --start --pidfile "${PIDFILE}" \
+                --exec "${MEMCACHED_BINARY}" \
+				--startas "${MEMCACHED_BINARY}" -- \
+                -d -p ${PORT} ${c_LISTENON} -m ${MEMUSAGE} \
+                -c ${MAXCONN} -u ${MEMCACHED_RUNAS} -P "${PIDFILE}" \
+				${MISC_OPTS}
+        eend $?
+}
+
+stop() {
+        if [ -n "${CONF}" ]; then
+                ebegin "Stopping memcached (${CONF})"
+        else
+                ebegin "Stopping memcached"
+        fi
+        start-stop-daemon --stop --quiet --pidfile "${PIDFILE}"
+        rm -f "${PIDFILE}"
+        eend $?
+}
