@@ -1,0 +1,3 @@
+MD5 0b2874087ffac3eb3dec6ea834fe16fc memcached-1.2.4-rc1.tar.gz 362644
+RMD160 f4c78bea6aa4112575eab466c4255651f9af33de memcached-1.2.4-rc1.tar.gz 362644
+SHA256 ecef3d5c912864a4c9ef209665cbb2546fca54e9cc79d833afba909f0c6cc988 memcached-1.2.4-rc1.tar.gz 362644
